--- a/linkedinin-clone-yt/src/Sidebar.css
+++ b/linkedinin-clone-yt/src/Sidebar.css
@@ -12,6 +12,16 @@
 
 }
 
+.sidebar__top > h4 {
+    color: gray;
+    font-size: 12px;
+
+}
+
+.sidebar__top > h2 {
+    font-size: 10px;
+}
+
 .sidebar__top {
     display: flex;
     flex-direction: column;
@@ -33,6 +43,37 @@
     object-fit: cover;
 }
 
+.sidebar__stat {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.sidebar__stat > p {
+    color: gray;
+    font-size: 13px;
+    font-weight: 600;
+}
+
 .sidebar__stats {
-    
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid lightgray;
+    background-color: white;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.sidebar__statNumber {
+    font-weight: bold;
+    color: #0a66c2 !important;
+}
+
+.sidebar__bottom {
+    text-align: left;
+    padding: 10px;
+    border: 1px solid lightgray;
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 10px;
 }
